# WebETL

./: .gitignore  Makefile  README.md  conftest.py  manage_runs.py  pyproject.toml  pytest.ini
analyze/: analyze.py  test_analyze.py
analyze/tests/: test_analyze.py
cli/: __init__.py  main.py
extract/: __init__.py  dispatch.py  http.py  rss.py
extract/tests/: test_dispatch.py
fetch/: dispatch.py  http.py  rss.py
fetch/tests/: test_dispatch.py
job/: gen_jobs.py  test_gen_jobs.py
load/: __init__.py  load.py
load/tests/: test_load.py
source/: __init__.py  base_processor.py  data_manager.py  source_manager.py
source/tests/: test_source_manager.py
test_server/: conftest.py  server.py  start_server.py  test_sources.yml
test_server/content/html/: article_1.html  article_1_appendix.html  article_2.html  article_2_appendix.html  article_3.html  article_3_appendix.html  home.html
test_server/content/json/: test.json
test_server/content/rss/: feed.xml
transform/: __init__.py  transform.py
transform/tests/: test_transform.py
xwebetl/extract/: dispatch.py
xwebetl/source/: source_manager.py
xwebetl/transform/: transform.py
xwebetl/transform/tests/: test_transform.py
